starting using lombok